# TCC_Polis

./: .coverage  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  base.py
backend/app/services/: __init__.py
backend/app/websocket/: __init__.py  manager.py  routes.py
backend/tests/: test_main.py
