[project]
name = "tcc-polis"
version = "0.1.0"
description = ""
authors = [
    { name = "Dagasfoka", email = "gmelo.loredo@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[standard]>=0.136.1,<0.137.0",
    "uvicorn[standard]>=0.46.0,<0.47.0",
    "websockets>=16.0,<17.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "taskipy>=1.14.1,<2.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.12,<0.16.0",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = "-ra -p no:warnings --cov=backend/app --cov-report=term-missing"

[tool.taskipy.tasks]
run = "python -m uvicorn backend.app.main:app --reload"

pre_test = "task lint"
test = "pytest -s -x --cov=backend/app -vv"
post_test = "coverage html"

check = "ruff check ."
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."